--- a/views/schedule.pug
+++ b/views/schedule.pug
@@ -15,7 +15,7 @@ block content
         th #{candidate.candidateName}
         each user in users
           - var availability = availabilityMapMap.get(user.userId).get(candidate.candidateId)
-          - var availabilityLabels = ['欠', '?', '出'];
+          - var availabilityLabels = ['欠', '？', '出'];
           td
             if user.isSelf
               button #{availabilityLabels[availability]}
